--- a/Battleships.Logic/appsettings.json
+++ b/Battleships.Logic/appsettings.json
@@ -4,20 +4,35 @@
     "ColumnCount": 10
   },
   "ShipTypes": [
-    {"Name": "Boat","Size": 1},
-    {"Name": "Corvette","Size": 2},
-    {"Name": "Frigate","Size": 3},
-    {"Name": "Destroyer","Size": 4},
-    {"Name": "Battleship","Size": 5},
-    {"Name":  "Carrier", "Size":  6 }
-
-  ],
-  "ShipCount": [
-    {"Name": "Boat","Count": 0},
-    {"Name": "Corvette","Count": 0},
-    {"Name": "Frigate","Count": 0},
-    {"Name": "Destroyer","Count": 2},
-    {"Name": "Battleship","Count": 1},
-    {"Name": "Carrier","Count": 0}
+    {
+      "Name": "Boat",
+      "Size": 1,
+      "Count": 0
+    },
+    {
+      "Name": "Corvette",
+      "Size": 2,
+      "Count": 0
+    },
+    {
+      "Name": "Frigate",
+      "Size": 3,
+      "Count": 0
+    },
+    {
+      "Name": "Destroyer",
+      "Size": 4,
+      "Count": 2
+    },
+    {
+      "Name": "Battleship",
+      "Size": 5,
+      "Count": 1
+    },
+    {
+      "Name": "Carrier",
+      "Size": 6,
+      "Count": 0
+    }
   ]
 }
